# atlas

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: watchdog.yml
.streamlit/: config.toml
atlas/: __init__.py  config.py  fred.txt
atlas/api/: main.py
atlas/backtest/: engine.py  metrics.py  validation.py
atlas/dashboard/: app.py
atlas/data/: base.py  calendar.py  fred.py  fx.py  names.py  store.py  yahoo.py
atlas/execution/: alpaca.py  base.py  ibkr.py  paper.py
atlas/features/: fundamental.py  momentum.py  regime.py  sector.py  sentiment.py  technical.py
atlas/learning/: feedback.py
atlas/monitoring/: healthcheck.py  notify.py
atlas/pipelines/: catchup.py  daily_run.py  daily_scan.py  paper_trade.py  reconcile.py  run_backtest.py  sentiment_ghost.py  sync_to_cloud.py
atlas/portfolio/: construction.py  risk.py  sizing.py
atlas/scoring/: composite.py  factors.py
atlas/signals/: generator.py
atlas/universe/: loader.py
config/: company_names.parquet  config.yaml
db/: schema.sql
docs/: ARCHITECTURE.md  BACKTEST.md  DEPLOYMENT.md  GO_LIVE.md  ROADMAP.md
scripts/: build_company_names.py  check_telegram_recipients.py  cloud_watchdog.py  generate_audit_pdf.py  generate_documentation.py  generate_guide_darius.py  reset_paper.py  run_and_sleep.ps1  start_dashboard.bat
tests/: test_alpaca.py  test_backtest.py  test_fx.py  test_monitoring.py  test_notify.py  test_paper_broker.py  test_portfolio.py  test_scoring.py  test_sentiment.py  test_signals.py  test_technical.py
(+3 files in other folders)
