[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas"
version = "0.1.0"
description = "ATLAS - Adaptive Trading & Learning Allocation System. Global equity quant platform: scoring multifactoriel, signaux, portefeuille, backtest, execution."
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
include = ["atlas*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
